# janusgraph-python

./: .gitignore  .travis.yml  APACHE-2.0.txt  AUTHORS.txt  BUILDING.md  CONTRIBUTORS.txt  LICENSE.txt  README.md  before-script.sh  build-docs.sh  build-library.sh  build.cmd  build.py  build.sh  constants.py  constants.sh  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: python.yml  release.yml
docs/: Makefile  conf.py  connecting.rst  geo-predicates.rst  geo-shapes.rst  index.rst  installation.rst  janusgraph_python.core.attribute.GeoPredicate.rst  janusgraph_python.core.attribute.TextPredicate.rst  janusgraph_python.core.attribute.rst  janusgraph_python.core.datatypes.rst  janusgraph_python.core.rst  janusgraph_python.driver.rst  janusgraph_python.rst  janusgraph_python.serializer.rst  janusgraph_python.structure.io.rst  janusgraph_python.structure.rst  janusgraph_python.utils.rst  make.bat  modules.rst  text-predicates.rst
janusgraph_python/: BUILDING.md  LICENSE.txt  build-docs.sh
janusgraph_python/docs/: __init__.py  geo-predicates.rst  geo-shapes.rst  installation.rst  make.bat
janusgraph_python/driver/: serializer.py
janusgraph_python/process/: traversal.py
janusgraph_python/structure/io/: graphbinaryV1.py  graphsonV3d0.py  util.py
src/: __init__.py
src/integrationtest/python/: DocTraversals_tests.py  (+7 more)
src/main/: __init__.py
tests/: requirements.txt
tests/integration/: RelationIdentifier_test.py  Text_test.py  config.ini  config.json  conftest.py  janusgraph.properties  load_data.groovy
(+77 files in other folders)
