[tool.poetry]
name = "janusgraph-python"
version = "0.1.0"
description = "JanusGraph Python driver"
authors = ["Ace <ace@mirato360.com>"]
license = "Apache-2.0"
packages = [
    { include = "janusgraph_python", from = "janusgraph_python/src/main/python" },
]

[tool.poetry.dependencies]
python = "^3.8"
gremlinpython = "3.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
